--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   "dependencies": {
     "body-parser": "^1.20.2",
     "express": "^4.18.2",
+    "firebase": "^10.8.1",
     "highlight.js": "^11.9.0"
   }
 }
